[gd_scene load_steps=11 format=3 uid="uid://i1ncxot38ce8"]

[ext_resource type="Script" path="res://scripts/MeleeEnemy.gd" id="1_nsn2j"]
[ext_resource type="PackedScene" uid="uid://drr1fkw237gjt" path="res://CustomNodes/debug_box_mesh_component.tscn" id="2_nq8lw"]
[ext_resource type="PackedScene" uid="uid://b6hoxlk4f2gue" path="res://CustomNodes/hurtbox_component.tscn" id="3_xsmsh"]
[ext_resource type="Script" path="res://scripts/HealthComponent.gd" id="4_4n3rd"]
[ext_resource type="PackedScene" uid="uid://twwmyixroiqj" path="res://CustomNodes/navigation_movement_component.tscn" id="5_u34fw"]
[ext_resource type="PackedScene" uid="uid://bgr8j2p2vvwtk" path="res://CustomNodes/movement_animation_component.tscn" id="6_aka4d"]

[sub_resource type="BoxShape3D" id="BoxShape3D_d31mi"]
size = Vector3(8, 11, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dgn7a"]
render_priority = 1
transparency = 1
albedo_color = Color(1, 1, 1, 0)
emission_enabled = true
emission = Color(1, 0, 0.0156863, 1)
texture_filter = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_ti4pq"]
size = Vector3(6, 11, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_675sg"]
size = Vector3(13, 11, 5)

[node name="MeleeEnemy" type="CharacterBody3D"]
script = ExtResource("1_nsn2j")

[node name="Hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7, 2, 0)
shape = SubResource("BoxShape3D_d31mi")

[node name="DebugBoxMeshComponent" parent="Hitbox/CollisionShape3D" instance=ExtResource("2_nq8lw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, -2, 0)
skeleton = NodePath("../..")
display_debug_mesh = false

[node name="EnemySprite" type="Sprite3D" parent="."]
material_overlay = SubResource("StandardMaterial3D_dgn7a")
pixel_size = 0.5
shaded = true
texture_filter = 0
hframes = 10

[node name="EnemyCollisions" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 2, 0)
shape = SubResource("BoxShape3D_ti4pq")

[node name="DebugHealthBar" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.2171, 0)
pixel_size = 0.1
modulate = Color(1, 0.215686, 0.262745, 1)
font_size = 18

[node name="Timer" type="Timer" parent="."]

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_xsmsh")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 2, 0)
shape = SubResource("BoxShape3D_675sg")

[node name="DebugBoxMeshComponent" parent="HurtboxComponent/CollisionShape3D" instance=ExtResource("2_nq8lw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, -2, 0)
skeleton = NodePath("../..")
display_debug_mesh = false

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("debug_health_label")]
script = ExtResource("4_4n3rd")
MAX_HEALTH = 200.0
debug_health_label = NodePath("../DebugHealthBar")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
radius = 4.0

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 13.0242, 4.80067)
light_color = Color(0.913725, 0, 0.368627, 1)
light_energy = 7.0
spot_range = 21.7863

[node name="NavigationMovementComponent" parent="." node_paths=PackedStringArray("agent", "enemy") instance=ExtResource("5_u34fw")]
agent = NodePath("../NavigationAgent3D")
enemy = NodePath("..")

[node name="MovementAnimationComponent" parent="." node_paths=PackedStringArray("navigation_movement_component") instance=ExtResource("6_aka4d")]
navigation_movement_component = NodePath("../NavigationMovementComponent")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
